# ai-agent-farm

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  Dockerfile  GITHUB_PUBLISH_INSTRUCTIONS.md  LICENSE  Makefile  README.md  TECHNICAL_ANALYSIS_REPORT.md  audit-report.md  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.vpn-backup  documentation.html  github_setup_guide.md  main.py  mkdocs.yml  monitor_progress.sh  pyproject.toml  pytest.ini  redis.conf  requirements-dev.txt  requirements.txt  run_web_interface.py  task_info.json  test_api.py  test_gemini.py  test_gemini_vpn.py  test_integration.py  test_monitoring.py  test_multiagent.py  test_task.py  upload_to_github.sh  xray-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: README.md  ci.yml  deploy-docs.yml  deploy.yml  docs.yml  release.yml  test.yml
app/: api.py  api_simple.py  app.py  config.py  main_crew.py  main_crew.py.simulation-backup  tasks.py  web_interface.py
docs/: DEVELOPMENT_REPORT.md  GITHUB_SETUP.md  agent-personalities-concept.md  index.md  n8n-integration-guide.md  showcase-teams.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
integrations/n8n/: README.md  ai-agent-farm-workflow.json  monitoring-alerts-workflow.json
logging/: README.md  grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  promtail-config.yaml
logging/dashboards/: ai-agent-farm-dashboard.json
scripts/: start-monitoring.sh
tests/: conftest.py
tests/e2e/: test_api_endpoints.py  test_full_workflow.py
tests/integration/: test_crew_factory.py  test_workflow.py
tests/unit/: test_api.py
